Fix itemType icon spacing in autocomplete, revamp CSS classes

--- a/src/components/Autocomplete/index.css
+++ b/src/components/Autocomplete/index.css
@@ -1,4 +1,4 @@
-.zotero-roam-tribute {
+.zr-tribute {
     max-width:450px;
     max-height:300px;
     overflow-y:scroll;
@@ -8,32 +8,36 @@
     border-radius: 3px;
 }
 
-.zotero-roam-tribute ul {
+.zr-tribute ul {
     list-style-type:none;
     padding:0px;
     margin-bottom: 0px;
 }
 
-.zotero-roam-tribute ul li {
+.zr-tribute ul li {
     padding: 3px 8px;
     font-size: 0.85em;
     line-height: 1.5em;
     display: flex;
 }
 
-.zotero-roam-tribute-selected {
+.zr-tribute--item-details {
+    padding: 0px 6px;
+}
+
+.zr-tribute--selected {
     background-color: #eaf3fc;
 }
 
 /* DARK THEMES */
 
 @media (prefers-color-scheme: dark){
-    .zotero-roam-tribute {
+    .zr-tribute {
         background-color: var(--zr-dark-selected-bc,#191919);
         color: var(--zr-dark-auxiliary,#95a8b7);
     }
 
-    .zotero-roam-tribute-selected {
+    .zr-tribute--selected {
         background-color: var(--zr-dark-elem-bg, #2B3143);
     }
 }
